--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Adulting for the Millenial Zombie</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root">
+      <script type="module" src="/src/main.jsx"></script>
+    </div>
   </body>
 </html>
